<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Qurbanku</string>
    <string name="welcome_quote">Permudah Manajemen Pembelian dan Patungan Kurban Anda dengan fitur di aplikasi QurbanKu</string>
    <string name="welcome_quote_question">Apa peran Anda dalam ibadah kurban kali ini?</string>
    <string name="next">Berikutnya</string>
    <string name="panitia">Panitia</string>
    <string name="jemaah">Jemaah</string>
    <string name="panitia_allcaps">PANITIA</string>
    <string name="jemaah_allcaps">JEMAAH</string>
    <string name="announcement">Pemberitahuan</string>
    <string name="login">Masuk</string>
    <string name="login_panitia_quote">Anda akan masuk sebagai Panitia Kurban</string>
    <string name="login_jemaah_quote">Anda akan masuk sebagai Jemaah</string>
    <string name="login_success_jemaah_title">Halo %s</string>
    <string name="login_success_panitia_title">Halo Panitia Masjid %s</string>
    <string name="login_failed_title">GAGAL MASUK</string>
    <string name="login_success_panitia_message">Ayo kelola manajemen kurban masjid Anda!</string>
    <string name="login_success_jemaah_message">Ayo permudah pembelian dan patungan hewan kurban di masjid terdekat!</string>
    <string name="login_failed_message">Email atau password Anda tidak valid!</string>
    <string name="login_question">Sudah memiliki akun?</string>
    <string name="signup">Daftar</string>
    <string name="signup_message">Anda yakin ingin mendaftar akun?</string>
    <string name="signup_panitia_quote">Masukkan data masjid Anda</string>
    <string name="signup_jemaah_quote">Masukkan data diri Anda untuk mendaftar akun</string>
    <string name="signup_success_message">Akun anda berhasil dibuat, silahkan login!</string>
    <string name="signup_failed_message">Email Anda telah terdaftar dalam sistem!</string>
    <string name="signup_success_title">BERHASIL MENDAFTAR</string>
    <string name="signup_failed_title">GAGAL MENDAFTAR</string>
    <string name="signUp_question_panitia">Masjid Anda belum memiliki akun?</string>
    <string name="signUp_question_jemaah">Anda belum memiliki akun?</string>
    <string name="column_isEmpty_message">Kolom tidak boleh kosong!</string>
    <string name="name_minimum">Minimum 2 karakter</string>
    <string name="email">Email</string>
    <string name="email_masjid">Email masjid</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="email_password_invalid">Email atau password tidak valid</string>
    <string name="name_masjid">Nama masjid</string>
    <string name="name_masjid_value">Masjid %s</string>
    <string name="name_masjid_with_location">Masjid %s, %s</string>
    <string name="contact_person_number">No. HP narahubung</string>
    <string name="head_takmir">Ketua takmir</string>
    <string name="name_head_takmir">Nama ketua takmir</string>
    <string name="password">Password</string>
    <string name="password_minimum">Password minimal 6 karakter</string>
    <string name="add_address">Tambah alamat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_bank_quote">Masukkan data Rekening</string>
    <string name="account_number">No. Rekening</string>
    <string name="bank_name">Nama bank</string>
    <string name="account_name">Nama nasabah</string>
    <string name="receiver_name">Nama penerima</string>
    <string-array name="note_jemaah_signUp">
        <item>⦾ Nama kepala keluarga akan dicantumkan ketika Anda berkurban</item>
        <item>⦾ Pastikan data yang Anda masukkan sudah benar</item>
    </string-array>
    <string-array name="note_panitia_signUp">
        <item>⦾ Pilih alamat dengan melakukan konfigurasi pada peta</item>
        <item>⦾ Pastikan data sudah benar sebelum menyimpan</item>
    </string-array>
    <string-array name="spinner_true_false">
        <item>Ya</item>
        <item>Tidak</item>
    </string-array>
    <string-array name="spinner_actor">
        <item>Panitia</item>
        <item>Jemaah</item>
    </string-array>
    <string-array name="spinner_qurban_animal">
        <item>Sapi</item>
        <item>Kambing</item>
        <item>Domba</item>
        <item>Kerbau</item>
        <item>Unta</item>
    </string-array>
    <string-array name="spinner_joint_venture">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="spinner_joint_venture_disabled">
        <item>1</item>
    </string-array>
    <string name="underlined_nextButton"><u>Lihat Selengkapnya</u></string>
    <string name="species">Kambing</string>
    <string name="variety">Jenis</string>
    <string name="variety_animal">Jenis Hewan</string>
    <string name="weight">Berat</string>
    <string name="weight_et_hint">Berat (kg)</string>
    <string name="weight_value">%s</string>
    <string name="joint_venture">Patungan</string>
    <string name="purchase_category">Pembelian</string>
    <string name="price">Rp %d</string>
    <string name="price_2">Rp %s</string>
    <string name="availability_number"><u>Tersedia %d orang</u></string>
    <string name="animal_availability"><u><b>%d</b> Hewan Kurban Tersedia</u></string>
    <string name="years_value">2023</string>
    <string name="chairman_event">Ketua Panitia</string>
    <string name="total_animal">Jumlah hewan</string>
    <string name="temp_id_transaction">id: %s</string>
    <string name="name">Nama</string>
    <string name="phone_number">No. HP</string>
    <string name="complete_address">Alamat lengkap</string>
    <string name="head_of_family">Nama kepala keluarga</string>
    <string name="note">Catatan</string>
    <string name="temp_date">23 April 2024 19.57</string>
    <string name="transaction_date">Tanggal transaksi</string>
    <string name="animal_name">Hewan</string>
    <string name="total_transfer">Total transfer</string>
    <string name="rejected"><b><strike>DITOLAK</strike></b></string>
    <string name="accepted"><b>DITERIMA</b></string>
    <string name="waiting_confirmation"><b>MENUNGGU KONFIRMASI</b></string>
    <string name="detail_instruction">Klik untuk melihat detail!</string>
    <string name="qurbani_location">Lokasi Kurban</string>
    <string name="qurbani_date">Tanggal Kurban</string>
    <string name="category">Kategori</string>
    <string name="home_panitia_quote">Daftar Hewan Kurban Masjid Anda</string>
    <string name="home_jemaah_quote">Permudah pembelian dan patungan hewan kurban Anda di masjid terdekat</string>
    <string name="masjid_list">Daftar Masjid</string>
    <string name="find_masjid_location_quote">Lihat Lokasi Masjid di Sekitar</string>
    <string name="qurbanku_copyright">qurbanku.</string>
    <string name="add_animal_quote">Tambah Hewan Kurban</string>
    <string name="pick_eid_alAdha_date">Pilih Tanggal Hari Raya Idul Adha</string>
    <string name="guide">Petunjuk</string>
    <string name="add_detail_animal">Lengkapi Data Hewan Kurban</string>
    <string name="add_date_advice">Anda belum memilih tanggal hari raya</string>
    <string name="take_picture">Ambil Gambar</string>
    <string name="choose_from_gallery">Pilih dari Galeri</string>
    <string name="add_animal_photo">Tambah Foto Hewan</string>
    <string name="add_animal_description">Tambah Deskripsi Hewan</string>
    <string name="color">Warna</string>
    <string name="operational_cost">Biaya operasional (Rp)</string>
    <string name="add_note_here_quote">Tambahkan catatan di sini.</string>
    <string name="joint_venture_amount">Jumlah patungan</string>
    <string name="save">Simpan</string>
    <string name="description_animal_name">Deskripsi %s</string>
    <string name="animal_price">Harga hewan</string>
    <string name="animal_price_et_hint">Harga hewan (Rp)</string>
    <string name="operational_cost_default">Biaya operasional</string>
    <string name="total_price">Total harga</string>
    <string name="total_cost_required">Ketentuan Biaya Pembelian</string>
    <string name="qurbani_information">Informasi Kurban</string>
    <string name="animal_status">Status hewan</string>
    <string name="holiday_date">Tanggal Hari Raya</string>
    <string name="shohibul_qurban">Shohibul Qurban</string>
    <string name="animal_confirm_status">Konfirmasi Status Penyembelihan</string>
    <string name="animal_confirm_status_message">Anda akan merubah status hewan menjadi telah disembelih. Lanjutkan?</string>
    <string name="detail_animal">Detail Hewan</string>
    <string name="delete_animal">Hapus hewan</string>
    <string name="delete_animal_data">Hapus Data Hewan</string>
    <string name="delete_animal_success">Data hewan telah dihapus</string>
    <string name="next2"><b>LANJUT</b></string>
    <string name="cancel"><b>BATAL</b></string>
    <string name="animal_delete_message">Anda yakin ingin menghapus data hewan?</string>
    <string name="animal_confirm_status_success">Status hewan berhasil diubah menjadi disembelih</string>
    <string name="animal_delete_failed">Tidak dapat dihapus karena hewan telah dibeli</string>
    <string name="animal_confirm_status_failed">Terdapat kesalahan, status hewan gagal diubah</string>
    <string name="save_data_animal">Simpan data hewan</string>
    <string name="save_data_animal_message">Anda yakin ingin menyimpan data?</string>
    <string name="transaction">Transaksi</string>
    <string name="add">Tambah</string>
    <string name="home">Beranda</string>
    <string name="profile">Profil</string>
    <string-array name="add_animal_guide">
        <item>1. Pilih tanggal hari raya Idul Adha</item>
        <item>2. Lengkapi data hewan kurban dengan menekan tombol</item>
    </string-array>
    <string name="jemaah_transaction_list_title">Daftar Transaksi Jemaah</string>
    <string name="your_transaction_list_title">Daftar Transaksi Anda</string>
    <string name="transaction_explanation">Keterangan Transaksi</string>
    <string-array name="transaction_explanation_value">
        <item>⦾ Putih = Belum dilakukan konfirmasi/cek</item>
        <item>⦾ Merah = Transaksi ditolak</item>
        <item>⦾ Hijau = Transaksi diterima</item>
    </string-array>
    <string name="species_variety">%s, %s</string>
    <string name="address">Alamat</string>
    <string name="animal_availability_number_title">Jumlah hewan kurban tersedia</string>
    <string name="transaction_data">Data Transaksi</string>
    <string name="transaction_destination_data">Data Tujuan Transfer</string>
    <string name="nominal">Nominal</string>
    <string name="see_next"><u>Lihat Selengkapnya</u></string>
    <string name="animal_data">Data Hewan</string>
    <string name="panitia_note">Catatan Panitia</string>
    <string name="detail_transaction">Detail Transaksi</string>
    <string name="jemaah_data">Data Jemaah</string>
    <string name="accept">TERIMA</string>
    <string name="reject">TOLAK</string>
    <string name="transaction_confirmation">Konfirmasi Transaksi</string>
    <string name="transaction_confirmation_accept_message">Anda yakin ingin MENERIMA transaksi</string>
    <string name="transaction_confirmation_reject_message">Anda yakin ingin MENOLAK transaksi</string>
    <string name="history_qurbani_amount">Jumlah Riwayat Kurban</string>
    <string name="buy_animal">Beli Hewan</string>
    <string name="add_transaction_photo">Tambah Foto Bukti Transfer</string>
    <string name="transfer_requirements">Persyaratan Transfer</string>
    <string name="transfer_terms">Ketentuan Transfer</string>
    <string name="photo_requirements">Ketentuan Foto</string>
    <string name="send">Kirim</string>
    <string name="transaction_photo_requirement_title">Pastikan gambar memperlihatkan bukti struk/kwitansi hasil transfer dengan jelas, dengan mencakup informasi minimal sebagai berikut :</string>
    <string name="history">Riwayat</string>
</resources>