<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panitia_mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.androidexpert.qurbanku_apps_skripsi.ui.home.panitia.HomePanitiaFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home_panitia" />

    <fragment
        android:id="@+id/navigation_add_animal"
        android:name="com.androidexpert.qurbanku_apps_skripsi.ui.animal.panitia.AddAnimalFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add_animal" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.androidexpert.qurbanku_apps_skripsi.ui.transaction.panitia.TransactionListPanitiaFragment"
        android:label="@string/transaction"
        tools:layout="@layout/fragment_transaction_list_panitia" />
    <fragment

        android:id="@+id/navigation_profile"
        android:name="com.androidexpert.qurbanku_apps_skripsi.ui.profile.panitia.ProfilePanitiaFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile_panitia" />

</navigation>