<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/jemaah_mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.androidexpert.qurbanku_apps_skripsi.ui.home.jemaah.HomeJemaahFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home_jemaah" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.androidexpert.qurbanku_apps_skripsi.ui.transaction.jemaah.TransactionListJemaahFragment"
        android:label="@string/transaction"
        tools:layout="@layout/fragment_transaction_list_jemaah" />

    <fragment
        android:id="@+id/navigation_qurbani_history"
        android:name="com.androidexpert.qurbanku_apps_skripsi.ui.transaction.jemaah.QurbaniHistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_qurbani_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.androidexpert.qurbanku_apps_skripsi.ui.profile.jemaah.ProfileJemaahFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile_jemaah" />

</navigation>