<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="4dp"
    tools:context=".ui.profile.jemaah.DetailProfileMasjidActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_masjid_name"
            style="@style/TextSpec.LabelWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/label_background"
            android:text="@string/name_masjid"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/text_color_light"
            app:layout_constraintBottom_toBottomOf="@+id/tv_masjid_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_masjid_name"
            app:layout_constraintTop_toTopOf="@+id/tv_masjid_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/profile_masjid_image_transparent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tv_email_title"
            style="@style/TextSpec.Value"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_email_value"
            style="@style/TextSpec.Value"
            android:text="@string/email"
            android:textColor="@color/text_color_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_head_title"
            style="@style/TextSpec.Value"
            android:layout_height="20dp"
            android:text="@string/head_takmir"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_head_value"
            style="@style/TextSpec.Value"
            android:text="@string/name"
            android:textColor="@color/text_color_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_contact_person_title"
            style="@style/TextSpec.Value"
            android:layout_height="20dp"
            android:text="@string/contact_person_number"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_contact_person_value"
            style="@style/TextSpec.Value"
            android:text="@string/phone_number"
            android:textColor="@color/text_color_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_account_number_title"
            style="@style/TextSpec.Value"
            android:layout_height="20dp"
            android:text="@string/account_number"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_account_number_value"
            style="@style/TextSpec.Value"
            android:text="@string/account_number"
            android:textColor="@color/text_color_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_bank_title"
            style="@style/TextSpec.Value"
            android:layout_height="20dp"
            android:text="@string/bank_name"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_bank_value"
            style="@style/TextSpec.Value"
            android:text="@string/bank_name"
            android:textColor="@color/text_color_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_account_name_title"
            style="@style/TextSpec.Value"
            android:layout_height="20dp"
            android:text="@string/account_name"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_account_name_value"
            style="@style/TextSpec.Value"
            android:text="@string/account_name"
            android:textColor="@color/text_color_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_address_title"
            style="@style/TextSpec.Value"
            android:layout_height="20dp"
            android:text="@string/address"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_address_value"
            style="@style/TextSpec.Value"
            android:text="@string/address"
            android:textColor="@color/text_color_light"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_animal_data"
            style="@style/TextSpec.LabelWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/label_background"
            android:text="@string/animal_data"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/text_color_light"
            app:layout_constraintBottom_toBottomOf="@+id/tv_animal_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_animal_data"
            app:layout_constraintTop_toTopOf="@+id/tv_animal_data" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_Refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/card_masjid_list">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_animal_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="false"
            tools:itemCount="4"
            tools:listitem="@layout/card_display_animal_item" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>